syntax="proto3";

import "kernel/ugc/proto/util.proto";

package NUgc.NSchema;

message TProfession {
    string Id = 1;                                         /// Unique profession identifier

    map<string, string> TitleByLanguage = 2;               /// Profession name in different languages
    map<string, string> DescriptionByLanguage = 3;         /// Full description of profession in different languages
    map<string, string> ShortDescriptionByLanguage = 4;    /// Short description of profession in different languages

    bool IsActive = 5;                                     /// Whether profession active or not
    TOwner Owner = 6;                                      /// Owner of this profession (service responsible for calculating points, levels, etc.)

    TIcon Icon = 7;                                        /// Profession icon
}
